--- a/lesson1/labs/intro/index-with-comments.html
+++ b/lesson1/labs/intro/index-with-comments.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 	<!-- The body contains all visible page elements, text, images, links etc -->
+	<h1>Meredith<h1>
+	<h6>Jamie<h6>
+	<h3>McBride<h3>
+	<p> blah blah</p>
+	<em>italic</em>
+	<p><strong>Rin is cool</strong></p>	
 </body>
 </html>
