--- a/lesson2/labs/lostCat/kittens.com/index.html
+++ b/lesson2/labs/lostCat/kittens.com/index.html
@@ -6,11 +6,17 @@
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+
 	</head>
 
 	<body>
-
-
+		<h1 style="color: red;">MEOW</ha>
+		<div>
+		<img src="kitten-shawnee.jpg"/>
+	</div>
+		<img src="images\kitten-jordan.jpg"/>
+		<img src="../kitten-roxy.jpg"/>
+		<img src="../puppies.com/images/puppy-jake.jpg"
 
 	</body>
 </html>
