--- a/lesson5/labs/threeColumnLayout/index.html
+++ b/lesson5/labs/threeColumnLayout/index.html
@@ -19,6 +19,19 @@
 				<h1>Blank Template</h1>
 				<h2>Just another blank template</h2>
 			</header> 	
+
+			<aside id="sidebar-left">
+				<p>this is the left sidebar</p>
+			</aside>
+			
+			<aside id="main-column">
+				<p> this is the main column</p>
+			</aside>
+			
+			<aside id="sidebar-right">
+				<p> this is the right sidebar</p>
+			</aside>	
+
 			<footer>
 				<!-- Footer Goes Here -->
 			</footer>
