--- a/lesson5/labs/twoColumnLayout/index.html
+++ b/lesson5/labs/twoColumnLayout/index.html
@@ -5,7 +5,7 @@
   	<meta name="description" content="Your description goes here">
   	<meta name="keywords" content="one, two, three">
 	
-		<title>Blank Template</title>
+		<title>Two Columnz</title>
 		
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -16,10 +16,39 @@
 	<body>
 		<div id="container">
 			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
+				<h1>Two Columns</h1>
+				<h2>Centering and coloring things</h2>
 			</header> 	
+
+			<div id="container" class="clearfix">
+				<div id="main" class="alignleft clearfix">
+					<h2>blog post no 1</h2>
+					  <img src="images/cutecat.jpeg" class="alignleft">
+
+					  <p> meow meow meow meeeee eeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeee eeeeeeeee eeeee eeeeeeee eeeeeeeeeeeee eeeeeeeeeeeeeeeeeeeee eeeeeeeeee eeeeeeeee eeeeeeeeee eeeeee eeeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeow memeeeee eeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeee eeeeeeeee eeeee eeeeeeee eeeeeeeeeeeee eeeeeeeeeeeeeeeeeeeee eeeeeeeeee eeeeeeeee eeeeeeeeee eeeeee eeeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeow me
+
+					  meeeee eeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeee eeeeeeeee eeeee eeeeeeee eeeeeeeeeeeee eeeeeeeeeeeeeeeeeeeee eeeeeeeeee eeeeeeeee eeeeeeeeee eeeeee eeeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeow me
+					  </p>
+				</div>
+
+				<div id="sidebar">
+					<h2>Sidebar</h2>
+
+					<p> meeeee eeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeee eeeeeeeee eeeee eeeeeeee eeeeeeeeeeeee eeeeeeeeeeeeeeeeeeeee eeeeeeeeee eeeeeeeee eeeeeeeeee eeeeee eeeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeow meow meow </p>
+				</div>
+				<div id="sidebar2">
+					<h2> blahdeblah</h2>
+
+					<p> meeeee eeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeee eeeeeeeee eeeee eeeeeeee eeeeeeeeeeeee eeeeeeeeeeeeeeeeeeeee eeeeeeeeee eeeeeeeee eeeeeeeeee eeeeee eeeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeow me 
+					meeeee eeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeee eeeeeeeee eeeee eeeeeeee eeeeeeeeeeeee eeeeeeeeeeeeeeeeeeeee eeeeeeeeee eeeeeeeee eeeeeeeeee eeeeee eeeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeow me
+					meeeee eeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeeeee eeeeeeeee eeeeeeeee eeeee eeeeeeee eeeeeeeeeeeee eeeeeeeeeeeeeeeeeeeee eeeeeeeeee eeeeeeeee eeeeeeeeee eeeeee eeeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeee eeeeeeeeeeeeeeeeeeeeeeee eeeeeeeeeeeeeeeee eeeeeeeeeeee eeeeeeeeeeeow me</p>
+
+				</div>
+
+			</div>		
 			<footer>
+				<h3>Footer stuff</h3>
+				<p> atte porttidsfator urfasdfna vesfnenatis ijbsdfd. Nwerwam iaasdfewculis rvfdisus acrwe mauris vesadfs tibulum malyutjesuada. ijolNulla doo;ilor mi, curshhhus sassed ornssdfadaweare vel, feuwergiat sejjjd</p>
 				<!-- Footer Goes Here -->
 			</footer>
 		</div><!-- #container --> 
