--- a/lesson10/labs/basicForm/basicform.html
+++ b/lesson10/labs/basicForm/basicform.html
@@ -58,6 +58,7 @@
       </div>
 
       <input type="submit" name="Submit"  class="button" value="Submit" />
+      <input type="reset" name="Reset"  class="button" value="Reset" />
     </form>
   </div><!-- .container -->
 </body>
