--- a/lesson2/labs/intro/index.html
+++ b/lesson2/labs/intro/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
 	<head>
-		<title>My First Page</title>
+		<title>To Do List</title>
 	</head>
 	<body>
-
+		<strong>get your life together</strong>
+		<ol><li>call Glenda</li>
+			<li>do your laundry</li>
+			<li>send dry cleaning</li>
+		</ol>
 
 	</body>
 </html>
